# pos-software

./: .env.default  .gitignore  .pre-commit-config.yaml  Cargo.toml  MIGRATION_ACTION_PLAN.md  Makefile  NEXT_STEPS.md  PROGRESS.md  README.md  build.rs  docker-compose.yml
crates/: Cargo.toml
crates/src/: lib.rs
crates/src/widgets/: mod.rs  modal.rs  toast.rs
docker/: sqlx.Dockerfile
migrations/: 20221010142158_create_tables.down.sql  20221010142158_create_tables.up.sql  20221010154132_fill_catalogs.down.sql  20221010154132_fill_catalogs.up.sql  20221018182809_sp_save_product_catalog.down.sql  20221018182809_sp_save_product_catalog.up.sql  20221126215317_sp_new_payment_loan.down.sql  20221126215317_sp_new_payment_loan.up.sql  20221129045255_sp_earnings.down.sql  20221129045255_sp_earnings.up.sql  sqlite_schema.sql
src/: config.rs  constants.rs  db.rs  domain.rs  errors.rs  events.rs  helpers.rs  kinds.rs  lib.rs  main.rs  mock_data.rs  queries.rs  result.rs  setup.rs
src/api/: inventory_api.rs  loans_api.rs  mod.rs  sales_api.rs
src/controllers/: catalog.rs  loan.rs  mod.rs  sale.rs  sale_info.rs  to_buy.rs
src/data/: catalog.rs  loan_repo.rs  mod.rs  product_repo.rs  sale_repo.rs
src/db/: mod.rs  queries.rs
src/handlers/: inventory_handler.rs  loans_handler.rs  mod.rs  sales_handler.rs
src/models/: catalog.rs  catalogs.rs  loan.rs  mod.rs  product.rs  sale.rs
src/repo/: loan_repo.rs  mod.rs  product_repo.rs  sale_repo.rs  traits.rs
src/repo/sqlite/: catalog_repo.rs  loan_repo.rs  mod.rs  product_repo.rs  sale_repo.rs
src/schemas/: catalog.rs  loan.rs  mod.rs  sale.rs  sale_info.rs
src/style/: btns.rs  mod.rs
src/utils/: db.rs  db_parsing.rs  formatting.rs  mod.rs  pdf.rs  validation.rs
src/views/: app.rs  body.rs  btns.rs  catalog.rs  catalog_row_add.rs  fonts.rs  icon.rs  loan.rs  menu.rs  mod.rs  modal.rs  pagination_nav.rs  sale.rs  sales_info.rs  to_buy.rs
src/views/inventory/: helpers.rs  mod.rs  pagination_nav.rs  product_form.rs  product_row.rs  products_table.rs  stat_card.rs  stats_summary.rs
src/views/loans/: helpers.rs  loan_form.rs  loan_pdf_receipt_modal.rs  loan_row.rs  mod.rs  pagination_nav.rs  payment_history_modal.rs  payment_modal.rs  receipt_modal.rs  receipt_template.rs  stat_card.rs
src/views/sales/: cart_item_row.rs  cart_summary.rs  mod.rs  product_card.rs  products_list.rs  quantity_modal.rs  receipt_template.rs  sale_message.rs  sale_receipt_modal.rs  validations.rs
src/views/style/: btns.rs  container.rs  mod.rs
templates/: loan_receipt.typ.stpl  receipt.typ.stpl
tests/: integration_test.rs  mock_data_test.rs
