[package]
name = "pos-app"
version = "0.2.0"
edition = "2021"
authors = ["POS Development Team"]
description = "Point of Sale system with inventory, sales, and loan management"

[dependencies]
# UI Framework
dioxus = "0.5"
dioxus-desktop = { version = "0.5", features = ["devtools"] }

# Database (will be added in Phase 2)
# sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "uuid", "chrono", "decimal"] }
# tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal for precise money calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Note: Development on macOS, targeting both macOS and Windows
# For Windows builds from macOS, use: cargo build --target x86_64-pc-windows-gnu
# Install Windows toolchain: rustup target add x86_64-pc-windows-gnu

[dev-dependencies]
# Testing utilities (will be added later)

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
