[package]
name = "pos-app"
version = "0.2.0"
edition = "2021"
authors = ["POS Development Team"]
description = "Point of Sale system with inventory, sales, and loan management"

[lib]
name = "pos_app"
path = "src/lib.rs"

[[bin]]
name = "pos-app"
path = "src/main.rs"

[dependencies]
# UI Framework
dioxus = { version = "0.7", features = ["desktop"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal for precise money calculations
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Note: Development on macOS, targeting both macOS and Windows
# For Windows builds from macOS, use: cargo build --target x86_64-pc-windows-gnu
# Install Windows toolchain: rustup target add x86_64-pc-windows-gnu

[features]
default = ["desktop"]
desktop = []

[dev-dependencies]
# Testing utilities (will be added later)

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
