[package]
name = "pos-app"
version = "0.2.0"
edition = "2021"
authors = ["POS Development Team"]
description = "Point of Sale system with inventory, sales, and loan management"

[dependencies]
# UI Framework
dioxus = { version = "0.7", features = ["desktop"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal for precise money calculations
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# PDF Generation with Typst
typst = "0.12"
typst-pdf = "0.12"

# Template engine
sailfish = "0.9"

# File dialogs
rfd = "0.15"

# Note: Development on macOS, targeting both macOS and Windows
# For Windows builds from macOS, use: cargo build --target x86_64-pc-windows-gnu
# Install Windows toolchain: rustup target add x86_64-pc-windows-gnu

[dev-dependencies]
# Testing utilities (will be added later)

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
